--- a/src/index.html
+++ b/src/index.html
@@ -4,20 +4,23 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vanilla App Template</title>
+    <title>WatchCharm</title>
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <load ="partials/header.html" />
+    <load ="partials/1-header.html" />
 
-    <section>
-      <h1>Example page title</h1>
-      <!-- Path to images as from index.html file -->
-      <img src="./img/javascript.svg" alt="" />
-    </section>
+    <main>
+      <load ="partials/2-hero.html" />
+      <load ="partials/3-about-us.html" />
+      <load ="partials/4-catalog.html" />
+      <load ="partials/5-advertisement.html" />
+      <load ="partials/6-sale.html" />
+      <load ="partials/7-reviews.html" />
+      <load ="partials/8-contact-us.html" />
+    </main>
 
-    <!-- Loads the specified .html file -->
-    <load ="partials/vite-promo.html" />
+    <load ="partials/9-footer.html" />
 
     <script type="module" src="./main.js"></script>
   </body>
