--- a/src/index.html
+++ b/src/index.html
@@ -5,22 +5,44 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WatchCharm</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
+      integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kUgjH6J03IBuG7JZPkcWMxJ5huwaBpOpnwYElP/m6wg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <load ="partials/1-header.html" />
+    <!-- https://github.com/dimahutsol -->
 
     <main>
       <load ="partials/2-hero.html" />
+      <!-- https://github.com/anna-vasylenko -->
+
       <load ="partials/3-about-us.html" />
+      <!-- https://github.com/IegorIgnatii -->
+
       <load ="partials/4-catalog.html" />
+      <!-- https://github.com/juliaparamonova -->
+
       <load ="partials/5-advertisement.html" />
+      <!-- https://github.com/koleso8 -->
+
       <load ="partials/6-sale.html" />
+      <!-- Микола -->
+
       <load ="partials/7-reviews.html" />
+      <!-- https://github.com/anna-vasylenko -->
+
       <load ="partials/8-contact-us.html" />
+      <!-- https://github.com/gramatchi -->
     </main>
 
     <load ="partials/9-footer.html" />
+    <!-- https://github.com/pinulartem24 -->
 
     <script type="module" src="./main.js"></script>
   </body>
