--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Our online store offers a wide selection of stylish watches. From classic models to modern smartwatches, we have something for everyone. Visit our website and find the perfect watch for yourself or as a gift."
+    />
     <title>WatchCharm</title>
     <link
       rel="stylesheet"
